tests/negative_tests/modules/dependentModuleArgs2.sa
module dependentModuleArgs2 where
    module M (b : Bool) where
        module M2(x : if b then Bool else Unit) where
            c = x

        module M3 = M2 True